# polkablocks

./: .env.example  .gitmodules  README-DOCKER.md  README.md  package.json  test.js  watson.md
.maintain/: .env.example  Dockerfile  deploy-contracts.sh  docker-compose.yml
backend/: package.json  server.js
backend/api/: route.js
backend/database/: main.sql
backend/services/: authService.js  emailVerification.js
contracts/: deploy.sh  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: Subscription.sol
contracts/test/: Subscription.t.sol
contracts/test/mocks/: MockERC20.sol
frontend/: next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/components/: navigation.tsx
frontend/src/app/components/polkablocks/: loginPopup.tsx
indexer/: README.md  package-lock.json  typegen.json
indexer/src/: main.ts  processor.ts
scripts/: deploy.sh
subscription/: Cargo.toml  lib.rs
subscription/test/: Subscription.t.sol
