[package]
name = "subscription"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "subscription"
path = "lib.rs"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
openbrush = { version = "3.2.0", default-features = false } 

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]